// common definition
syntax = "proto3";

package service;

message DummyRequest {

}

message DummyResponse {

}

message Peer {
  // Peer identifier
  string id = 1;
  // Name of peer
  string name = 2;
  // Short description about peer
  string desc = 3;
  // Timestamp indicates when peer joined 
  int64 joined_at = 4;
  // Last time peer login
  int64 lastlog = 5;
  // Authentication
  string passphase = 6;
}

message Request {
  // Sender identity
  Peer sender = 1;
}

message VersionResponse {
  OpStatus status = 1;
  string version = 2;
}

message Service {
  // Service identifier
  string id = 1;
  // Name of service
  string name = 2;
  // Short description about service
  string desc = 3;
}

message ServiceResponse {
  OpStatus status = 1;
  repeated Service services = 2;
}

enum StatusCode {
  Ok = 0;
  NotFound = 1; 
  ArgumentError = 2;
  ServerException = 3;
  AuthFailure = 4;
  PrivilegeError = 5;
}

message OpStatus {
  // Operation status code
  StatusCode code = 1;
  // Detailed description about status
  string desc = 2;
}

message Message {
  // Message identifier
  string id = 1;
  // Message buffer
  string content = 2;
  // Sender identity
  Peer sender = 3;
  // Timestamp message being created
  int64 created_at = 4;
  // Timestamp message being read
  int64 read_at = 5;
  // Destroy message on timeout if timeout is set
  int64 timeout = 6;
}

message MessageResponse {
  OpStatus status = 1;
  repeated Message msgs = 2;
}

